# Atomic_hack

./: DEVELOP.md  Dockerfile  README.md  database.py  docker-compose.yaml  llm_credentials.env  main.py  pg_config.env  pgvector.dockerfile  pyproject.toml  req.txt  test.ipynb
models/: leave_me_empty.txt
src/atomic_hack/: cli.py  deps.py  settings.py  utils.py  web.py
src/atomic_hack/database/postgres/: schema.sql
src/atomic_hack/entities/: chat.py  llm.py  web.py
src/atomic_hack/repositories/: gigachat.py  pg_chat.py
src/atomic_hack/services/: chat.py  embeddings.py  llm.py  pdf_loader.py  pipeline.py  sessions.py
src/atomic_hack/templates/: loading.jinja  main.html  message.jinja
