[tool.poetry]
name = "atomic-hack"
version = "0.1.0"
description = ""
authors = ["Алексей Мещеряк <alexmeshr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
click = "^8.1.7"


pydantic-settings = "^2.3.2"
psycopg = "^3.1.19"
langchain = "^0.2.5"
gigachat = "^0.1.29"
pgvector = "^0.2.5"
langchain-community = "^0.2.5"
langchain-postgres = "^0.0.7"
transformers = {extras = ["torch"], version = "^4.41.2"}
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
ahack = 'atomic_hack.cli:cli'
