[tool.poetry]
name = "atomic-hack"
version = "0.1.0"
description = ""
authors = ["Алексей Мещеряк <alexmeshr@gmail.com>"]
readme = "README.md"
package-mode = false
packages = [
    { include = "atomic_hack" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
click = "^8.1.7"


jinja2 = "^3.1.4"
pydantic-settings = "^2.3.2"
psycopg = "^3.1.19"
langchain = "^0.2.5"
gigachat = "^0.1.29"
pgvector = "^0.2.5"
langchain-community = "^0.2.5"
langchain-postgres = "^0.0.7"
transformers = {extras = ["torch"], version = "^4.41.2"}
torch = {version = "^2.3.1+cu121", source = "pytorch-gpu"}
torchvision = {version = "^0.18.1+cu121", source = "pytorch-gpu"}
torchaudio = {version = "^2.3.1+cu121", source = "pytorch-gpu"}
accelerate = "^0.31.0"
bitsandbytes = "^0.43.1"
sentence-transformers = "^3.0.1"
tqdm = "^4.66.4"
pypdf = "^4.2.0"
[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
ahack = 'atomic_hack.cli:cli'
